<resources>
    <string name="app_name">GoSCELE</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="copyrights">GoSCELE - Unofficial App © 2017</string>
    <string name="username_password_required_field">Username and password are required field</string>
    <string name="connection_problem">Connection problem</string>
    <string name="username_password_wrong">Username or password wrong</string>
    <string name="loading">Loading...</string>
    <string name="greeting_message">Welcome back, %s!</string>
    <string name="home">HOME</string>
    <string name="courses">COURSES</string>
    <string name="schedules">SCHEDULES</string>
    <string name="settings">SETTINGS</string>
    <string name="copy_url">Copy URL</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="open_in_other_app">Open in other app</string>
    <string name="academic_announcement">Pengumuman Akademis</string>
    <string name="forum_curriculum">Forum Kurikulum 2016</string>
    <string name="forum_general">Forum Umum</string>
    <string name="forum_kp_st_ta">Forum KP - ST - TA</string>
    <string name="forum_library">Forum Perpustakaan</string>
    <string name="forum_scholarship">Forum Beasiswa</string>
    <string name="forum_assistant">Forum Asisten</string>
    <string name="forum_feedback">Forum Feedback</string>
    <string name="forum_suggestion">Forum Usul</string>
    <string name="forum_lounge">Forum Santai</string>
    <string name="forum_question_answer">Forum Tanya-Jawab</string>
    <string name="forum_vacancy">Forum Lowongan</string>
    <string name="forum_academic_rule">Forum Peraturan Akademis</string>
    <string name="forum_lost_found">Forum Lost and Found</string>
    <string name="forum_competition_info">Forum Kompetisi</string>
    <string name="forum_graduate_info">Forum Informasi Wisudawan</string>
    <string name="forum_helpdesk">Forum Heldesk</string>
    <string name="forum_labsitter">Forum Labsitter</string>
    <string name="forum_ukm">Forum UKM</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_fragment_home">Latest Update</string>
    <string name="empty">Empty</string>
    <string name="permission_title">Permission necessary</string>
    <string name="storage_permission">External storage permission is necessary</string>
    <string name="downloading_file">Downloading file...</string>
    <string name="download_failed">Download failed!</string>
    <string name="url_copied">URL Copied!</string>
    <string name="delete_thread">Delete Thread</string>
    <string name="are_you_sure_want_to_delete_this">Are you sure want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="please_wait">Please wait...</string>
    <string name="cancel">Cancel</string>
    <string name="thread_deleted">Thread deleted!</string>
    <string name="post">Post</string>
    <string name="comment">Comments</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="comment_deleted">Comment deleted!</string>
    <string name="title_fragment_current_course">Current</string>
    <string name="title_fragment_all_course">All</string>
    <string name="archive">Archive</string>
    <string name="add_to_current">Add To Current</string>
    <string name="courses_fragment_title">Courses</string>
    <string name="schedule_fragment_title">Schedule</string>
    <string name="title_fragment_deadline">Deadline</string>
    <string name="title_fragment_daily">Daily</string>
    <string name="sync_instruction">For the first time, please click the \"SYNC\" button to synchronize your account.</string>
    <string name="course_detail">Courses Detail</string>
    <string name="widget_schedule_daily_header">Daily Schedule</string>
    <string name="widget_sync_instruction">Please synchronize your account in daily schedule tab and re-create this widget.</string>
    <string name="title_activity_forum_list">ForumListActivity</string>
    <string name="settings_title_fragment">Settings</string>
    <string name="about">ABOUT</string>
    <string name="about_title_fragment">About</string>
    <string name="hint_search_course">Search course...</string>
    <string name="hint_search_forum">Search forum...</string>
</resources>
